# ipcalc

./: .gitignore  CMakeLists.txt  ChangeLog.txt  Makefile  README.txt  global.h  ipcalc.dev  ipcalc.sln  meson.build
data/: PKGBUILD  cmake-mingw32.cmake  cmake-mingw64.cmake  ipcalc-gui.rc  ipcalc.rc  libipcalculator.rc  meson-aarch64.ini  meson-arm32.ini  meson-mingw32.ini  meson-mingw64.ini
getopt/: getopt.c  getopt.h  getopt.vcxproj  getopt.vcxproj.filters  getopt_long.c
ipcalc-gui/: ipcalc-gui.vcxproj  ipcalc-gui.vcxproj.filters
ipcalc-gui/abouts/: abouts.cpp  abouts.h
ipcalc-gui/global/: ipcalc.cpp  stdafx.h  targetver.h
ipcalc-gui/ipv4calc/: ipv4calc.cpp  ipv4calc.h
ipcalc-gui/mfc/: ipcalc-gui.vcxproj  ipcalc-gui.vcxproj.filters
ipcalc-gui/mfc/abouts/: abouts.cpp
ipcalc-gui/mfc/global/: ipcalc.cpp  ipcalc.h  resource.h  stdafx.cpp
ipcalc-gui/mfc/ipv4calc/: ipv4calc.cpp
libipcalculator/: ipcalc_internal.c  ipcalc_internal.h  ipcalc_public.c  ipv4.h  ipv4_check.c  ipv4_convert.c  ipv4_get.c  ipv4_misc.c  ipv4_object.c  ipv4_parse.c  ipv4_print.c  ipv4_type.c  libipcalculator.pc.in  libipcalculator.vcxproj  libipcalculator.vcxproj.filters
tools/: interface_getifaddrs.c  interface_netlink.c  interface_windows.c  ipcalc.c  ipcalc.h  ipcalc.vcxproj  ipcalc.vcxproj.filters  ipcalc_result.c  ipcalc_usage.c
